# groupint

./: .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  Dockerfile  Dockerfile_test  Lufsen2.  Lufsen2..pub  README.md  chat_pmr.json  docker-compose.atlos.yml  docker-compose.desktop.yml  docker-compose.yml  docker-entrypoint.sh  interface.py  interface_file_parse.py  main.py  models.py  myinfo.md  pyproject.toml  telethon.session  telethon.session-journal  useful_links
.streamlit/: config.toml  secrets.toml
core/: download_file.py  group_identity.py  login.py  message_links.py  settings.py  telegram_session.py  telegram_urls.py  telethon.session  tg_api_connector.py  upload_file.py
db/: config.py  dal.py  neo4j_browser.py  queries.py
docs/: configuration.md  development.md  index.md  installation.md  main-application.md  neo4j-and-gephi.md  overview.md  troubleshooting.md  tutorial-full-workflow-uk.md
draw_graph/: common_groups_plot.py  dynamic_plot.py  endorsement_plot.py  plot.py  server_plot.py  test.json
pages/: 2_Incidents.py
scripts/: build-docs.sh  down-desktop.sh  incident-worker.py  merge-duplicate-groups.sh  merge_docs.py  up  up-desktop.sh  up-full.sh  wipe-neo4j-data.sh
streamlit_utils/: telegram_auth.py  text.py
tests/: test_atlos_csv_export.py  test_atlos_export.py  test_delete_group_data.py  test_fetch_unpack.py  test_group_identity.py  test_incident_categories.py  test_incident_geojson.py  test_incident_keywords.py  test_incident_pipeline_mock.py  test_member_dedupe.py  test_merge_docs.py  (+5 more)
(+32 files in other folders)
